# a8-validate

./: .cursorrules  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  assimil8or.md  generate_preset_ranges.py  plan.md  preset_max_values.yml  preset_min_values.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  validate_directory.py
.cursor/rules/: github-issue-workflow.mdc  github-mcp-fallback.mdc  venv-path.mdc
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  validation_issue.md
.github/workflows/: coverage.yml  lint.yml  security.yml  test.yml
a8_validate/: __init__.py  cross_reference_validator.py  file_system_validator.py  schema_validator.py  yaml_parser.py
a8_validate/tests/: __init__.py  test_cross_reference_validator.py  test_file_system_validator.py  test_schema_validator.py  test_validate_directory.py  test_yaml_parser.py
scripts/: generate_preset_ranges.py  validate_all_subdirs.py
