[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "a8-validate"
version = "1.1.0"
description = "Assimil8or preset YAML validator — schema compliance, cross-references, WAV checks"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "rozling" }]
keywords = ["assimil8or", "preset", "validator", "yaml", "wav"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio",
]
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.5.0",
    "coverage>=7.3.0",
    "black>=24.1.0",
    "isort>=5.13.0",
    "flake8>=7.0.0",
    "flake8-docstrings>=1.7.0",
    "safety>=3.0.0",
    "pip-audit>=2.6.0",
    "pre-commit>=3.5.0",
]

[project.scripts]
a8-validate = "validate_directory:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["a8_validate*"]

[tool.setuptools]
py-modules = ["validate_directory"]

# Lint/format config: single source of truth for local, pre-commit, and CI (via pre-commit run).
[tool.black]
line-length = 120
target-version = ["py310"]
include = '\.pyi?$'
extend-exclude = '''
/(
  \.eggs
  | \.git
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 120
known_first_party = ["a8_validate"]
